<resources>
    <string name="app_name">Image Machine</string>

    <string name="text_date_dialog">%1d/%2d/%3d</string>
    <string name="text_type">Type: %1s</string>
    <string name="text_qr_code_num">QR Code Number: %1s</string>
    <string name="text_date">Latest Maintenance Date: %1s</string>

    <string name="text_main_1">Welcome to Image Machine</string>
    <string name="text_main2">Please select the menu you want to go</string>

    <string name="title_machine_data">Machine Data</string>
    <string name="title_code_reader">Code Reader</string>

    <string name="title_machine_id">Machine ID</string>
    <string name="title_machine_name">Machine Name</string>
    <string name="title_machine_type">Machine Type</string>
    <string name="title_machine_qr_code">Machine QR Code Number</string>
    <string name="title_machine_date">Latest Maintenance Date</string>
    <string name="title_btn_add_machine_data">Add Machine Data</string>

    <string name="title_machine_image">Machine Image</string>
    <string name="title_btn_delete_machine_data">Delete Machine Data</string>

    <string name="title_update_machine_data">Update Machine Data</string>
    <string name="title_btn_update_machine_data">Update Machine Data</string>

    <string name="text_maintenance_date">Maintenance Date</string>

    <string name="dialog_warning_title_text">Input data incomplete!</string>
    <string name="dialog_warning_body_text">Please input your data completely to be able to add the data.</string>

    <string name="dialog_input_success_title_text">Input data complete!</string>
    <string name="dialog_input_success_body_text">Your data have been inputted correctly. Please wait a moment while we redirect you to the data list page.</string>

    <string name="dialog_delete_title_text">Delete data?</string>
    <string name="dialog_delete_body_text">You\'ll lose the data and it will not be able to be recovered.</string>
    <string name="dialog_delete_cancel_button_text">Cancel</string>
    <string name="dialog_delete_confirm_button_text">Delete</string>

</resources>