<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.UpdateMachineDataActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpdateMachine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingEnd="32dp"
            tools:ignore="RtlSymmetry">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="center_horizontal"
                android:text="@string/title_update_machine_data"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/lineUpdateMachine1"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUpdateMachine"/>

    <TextView
        android:id="@+id/txtUpdateDataTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/title_machine_id"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUpdateMachine" />

    <EditText
        android:id="@+id/etUpdateDataId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_1"
        android:fontFamily="@font/caviar_dreams_regular"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateDataTitle1"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtUpdateDataTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/title_machine_name"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateDataId" />

    <EditText
        android:id="@+id/etUpdateDataName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_1"
        android:fontFamily="@font/caviar_dreams_regular"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateDataTitle2"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtUpdateDataTitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/title_machine_type"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateDataName" />

    <EditText
        android:id="@+id/etUpdateDataType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_1"
        android:fontFamily="@font/caviar_dreams_regular"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateDataTitle3"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtUpdateDataTitle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/title_machine_qr_code"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateDataType" />

    <EditText
        android:id="@+id/etUpdateDataQrCodeNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_1"
        android:fontFamily="@font/caviar_dreams_regular"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateDataTitle4"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtUpdateDataTitle5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/title_machine_date"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateDataQrCodeNum" />

    <TextView
        android:id="@+id/tvUpdateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_calendar"
        android:fontFamily="@font/caviar_dreams_italic"
        android:gravity="center_vertical"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateDataTitle5"
        tools:text="Maintenance Date"/>

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_2"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/title_update_machine_data"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateDate" />

</androidx.constraintlayout.widget.ConstraintLayout>